spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ transition: background-color 0.5s linear;
   font-size: 1.8rem;
   text-align: left;
   cursor: pointer;
-  /*padding-right:10px;*/
+  padding-right:10px;
 }
 
 .top, .bottom{
@@ -338,7 +338,7 @@ a{
     display:none;
   }
   #about{
-    padding-top:30px;
+    padding-top:60px;
     display:none;
     grid-template-columns: 29fr 71fr;
     grid-column-gap:10px;
@@ -356,11 +356,11 @@ a{
     padding-right:6px;
     grid-row:1;
     padding-right:20px;
-    border-bottom:1px black solid;
+    /*border-bottom:1px black solid;*/
     margin-bottom:8px;
   }
   #about img{
-    display:block;
+    display:none;
     max-width:100%;
     max-height:100%;
     padding:0;
@@ -371,14 +371,15 @@ a{
     padding-right:10px;
   }
   #about .contact{
-    display:none;
+    /*display:none;*/
+    font-size:22px;
   }
-  #about .mobilecontact{
+  /*#about .mobilecontact{
     display:flex;
     flex-direction:column;
     grid-column:2;
     font-size:22px;
-  }
+  }*/
   #about span{
     font-size:22px;
     grid-column:1;
